--- a/experiments/accuracy_table.ipynb
+++ b/experiments/accuracy_table.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "a5720aa2-4365-4bd3-b2e8-c52217de46ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lino_\\proyects\\labelFreeCBM\\clip\\clip.py:6: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import packaging\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "#Virtually change to parent dir\n",
@@ -228,9 +237,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-lf_cbm]",
+   "display_name": ".venv",
    "language": "python",
-   "name": "conda-env-jovyan-lf_cbm-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -242,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
